# MemScanner

./: .clang-format  .gitignore  CMakeLists.txt  MinGW_CrossCompiler.cmake
.github/workflows/: cmake.yml
include/MemScanner/: Macros.h  Mem.h  MemScanner.h
src/: Mem.cpp  Mem.h  MemScanner.cpp  MemScanner.h  MemScanner_AVX2.cpp
test/: PatternTest.cpp
